# linkfeed

./: .gitignore  CITATION.cff  CLAUDE.md  README.md  check_readabilipy.py  claude-feed.yaml  debug_date.py  feed copy.json  feed copy.xml  feed-config.yaml  feeds.example.yaml  justfile  mise.toml  pyproject.toml  site.example.yaml  test_date_extraction.py  test_plain_text_formats.py  test_plain_text_handling.py
.github/: copilot-instructions.md
.github/workflows/: generate-feeds.yml  generate-site.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
feeds/: index.html
feeds/anthropic-engineering/: feed.xml
feeds/toreadlater/: feed.xml
feeds/trello/: feed.xml
linkfeed/: __init__.py  cli.py  config.py  feed.py  models.py  site.py
linkfeed/parsers/: __init__.py  base.py  generic.py  media.py  youtube.py
linkfeed/utils/: __init__.py  blacklist.py  date_extraction.py  markdown.py  network.py  scraper.py  tagging.py  trello.py  url.py  whitelist.py
tests/: __init__.py  test_feed.py  test_paragraph_selection.py  test_parsers.py  test_rebuild.py  test_site_generation.py  test_utils.py  test_whitelist.py
