[project]
name = "linkfeed"
version = "0.1.0"
description = "Generate JSON Feed and RSS from URL links"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "click>=8.3.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "aiohttp>=3.13.2",
    "beautifulsoup4>=4.14.3",
    "feedgen>=1.0.0",
    "readabilipy>=0.3.0",
    "openai>=2.14.0",
]

[project.scripts]
linkfeed = "linkfeed.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
